@@ -14,6 +14,7 @@ Permitir grabar una nota de texto en un snapshot ZSF
 Permitir encontrar archivos de rom al ejecutar ZEsarUX desde una carpeta actual diferente de la ruta de las roms
 Permitir seleccionar máquina según tipo familia (Spectrum, ZX80, ZX81, CPC, etc)
 Agregado soporte para archivos .ay en Visor de Archivos
+Agregado soporte para archivos GENS en Visor de Archivos
 Permitir cambiar path del archivo de configuración desde el menú
 Premitir ver archivo expandido desde submenus de Almacenamiento (cinta, dsk, etc)
 Permitir ver la pila del GO SUB de Basic
