@@ -14,6 +14,7 @@ Allow to save text note on a ZSF snapshot
 Allow to locate rom files running ZEsarUX from a current folder different than the rom path
 Allow machine selection by family type (Spectrum, ZX80, ZX81, CPC, etc)
 Added .ay file support to File Viewer
+Added GENS file support to File Viewer
 Allow to change configuration file path from the menu
 Allow to view expanded file from Storage submenus (tape, dsk, etc)
 Allow to view GO SUB Basic stack
